--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="client.js"></script>
   </head>
   <body>
-    
+    <div>
+      <button type="button" id="genButton">Generate</button>
+    </div>
   </body>
 </html>
