Generate button now adds blank DIV element to DOM

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <div>
       <button type="button" id="genButton">Generate</button>
     </div>
+    <div id="holdDiv">
+      <!-- should be blank and appended to later -->
+    </div>
   </body>
 </html>
