--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Code Challenge #1</title>
-    <link rel="stylesheet" href="client.css">
+    <link rel="stylesheet" href="style.css">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="client.js"></script>
   </head>
